--- a/templates/one_p.html
+++ b/templates/one_p.html
@@ -7,7 +7,7 @@
 <body>
 <p>登录 <input type="text" id="nick"><button onclick="login()">登录</button></p>
 <p>给 <input type="text" id="to_user"></p>
-<p>发送消息 <input type="text" id="message"><button onclick="send_mag()">发送</button></p>
+<p>发送消息 <input type="text" id="message"><button onclick="send_msg()">发送</button></p>
 <div id="message_list" style="width: 500px;"></div>
 </body>
 <script type="text/javascript">
